--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     ]
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -44,6 +45,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-redux": "^8.1.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "typescript": "^4.9.5",
@@ -55,9 +57,9 @@
     "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-import": "^2.27.5",
     "prettier": "^2.8.8"
   }
 }
