--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "party-sharing",
   "version": "0.1.0",
+  "homepage": "https://bvfromru.github.io/party-sharing",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -59,6 +62,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
+    "gh-pages": "^5.0.0",
     "prettier": "^2.8.8"
   }
 }
